--- a/templates/docs/docs/index.mdx
+++ b/templates/docs/docs/index.mdx
@@ -5,23 +5,13 @@ menu: Docs
 
 # ITP App
 
-> This is an example code snippet which you can copy and supports fenced MD code blocks
-
-```js
-(async () => {
-  const res = await (await fetch('https://jsonplaceholder.typicode.com/todos/1')).json();
-  return res;
-})
-```
-
 ## Example Component
 
 import { Playground, PropsTable } from 'docz'
-// https://github.com/pedronauck/docz/issues/225
-import Header from '../../src/common/components/atoms/Header';
+import ExampleComponent from './ExampleComponent';
 
 <Playground>
-  <Header title="In The Pocket" />
+  <ExampleComponent />
 </Playground>
 
-<PropsTable of={Header}/>
+<PropsTable of={ExampleComponent}/>
